--- a/DarockBili Watch App/Localizable.xcstrings
+++ b/DarockBili Watch App/Localizable.xcstrings
@@ -11,6 +11,9 @@
         }
       }
     },
+    "\n\n发布信息:\n基本\n  App 图标已更改\n  已知问题:\n    未登录时尝试播放视频可能会崩溃(75651612)\n    多级导航、连续向下加载时可能出现导致崩溃的内存溢出问题(85111073)\n    偶现内存占用远超正常值(约 4 倍)\n    App 中的一些图片可能无法正常显示(13852689)\n启动:\n  已修复的问题:\n    新手指导可能会多次出现首页推荐\n  已修复的问题:\n    页面每次出现时都会向下加载新内容(46044875)\n视频详情\n  已修复的问题:\n    当前观看人数仅显示占位符(27092768)\n  已知问题:\n    进入视频详情页时有小概率崩溃(29123798)\n    仅音频播放无法正常使用(12706417)\n    右上角详情按钮无响应(16973338)\n    收藏视频时可能崩溃(34580307)\n评论\n  已修复的问题:\n    评论区可能无法加载所有评论(18930998)\n个人主页\n  已修复的问题:\n    用户粉丝、硬币数仅显示占位符(30026849)\n    在查看非本人账号时仍显示硬币数(仅占位符)\n    可能无法加载所有专栏(49652836)\n  已知问题:\n    第一屏可能出现布局错误(42845459)\n    第一屏操作按钮无响应(44650878)\n好友列表\n  已知问题:\n   粉丝列表无内容显示(61350129)\n离线缓存\n  已知问题:\n    尝试播放已缓存视频时仅显示占位符(25083414)\n反馈问题\n  新功能:\n    App 异常退出时会自动捕获异常信息，并在下次启动时显示并允许报告\n  已知问题:\n    发送反馈失败时没有提示(76686611)" : {
+
+    },
     "--- Alamofire ---\nLicensed under MIT license\n-----------------\n\n--- EFQRCode ---\nLicensed under MIT license\n----------------\n\n--- libwebp ---\nLicensed under BSD-3-Clause license\n---------------\n\n--- SDWebImage ---\nLicensed under MIT license\n------------------\n\n--- SDWebImagePDFCoder ---\nLicensed under MIT license\n--------------------------\n\n--- SDWebImageSVGCoder ---\nLicensed under MIT license\n--------------------------\n\n--- SDWebImageSwiftUI ---\nLicensed under MIT license\n-------------------------\n\n--- SDWebImageWebPCoder ---\nLicensed under MIT license\n---------------------------\n\n--- swift_qrcodejs ---\nLicensed under MIT license\n----------------------\n\n--- SwiftyJSON ---\nLicensed under MIT license\n------------------" : {
       "localizations" : {
         "en" : {
@@ -28,11 +31,22 @@
       }
     },
     "#%lld" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : ""
+          }
+        }
+      }
+    },
+    "%@\n%@" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@\n%2$@"
           }
         }
       }
@@ -72,10 +86,17 @@
         }
       }
     },
+    "%lld 专栏" : {
+
+    },
+    "%lld 视频" : {
+
+    },
     "114 人在看" : {
 
     },
     "bilibili UP主认证：%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -146,6 +167,9 @@
         }
       }
     },
+    "UP 主认证" : {
+
+    },
     "Watch 的状态栏（控制中心上方）显示为%@而不是%@" : {
       "localizations" : {
         "zh-Hans" : {
@@ -176,7 +200,13 @@
         }
       }
     },
+    "下面是错误详情：" : {
+
+    },
     "不发送" : {
+
+    },
+    "不想登录？直接反馈 ->" : {
 
     },
     "专栏" : {
@@ -189,6 +219,9 @@
           }
         }
       }
+    },
+    "了解！" : {
+
     },
     "人机验证已完成" : {
       "localizations" : {
@@ -268,6 +301,9 @@
     "反馈问题" : {
 
     },
+    "发生错误前..." : {
+
+    },
     "发生问题前...(选填)" : {
 
     },
@@ -278,6 +314,9 @@
 
     },
     "发送的反馈中不含任何您的个人信息" : {
+
+    },
+    "发送验证码" : {
 
     },
     "取消" : {
@@ -301,12 +340,28 @@
         }
       }
     },
+    "呜啊！" : {
+
+    },
     "喵哩喵哩 v%@ Build %@" : {
       "localizations" : {
         "zh-Hans" : {
           "stringUnit" : {
             "state" : "new",
             "value" : "喵哩喵哩 v%1$@ Build %2$@"
+          }
+        }
+      }
+    },
+    "喵哩喵哩在上次运行时出现了一些问题" : {
+
+    },
+    "喵哩喵哩新版本(v%@ Build %@)已发布！可前往 TestFlight 更新" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "喵哩喵哩新版本(v%1$@ Build %2$@)已发布！可前往 TestFlight 更新"
           }
         }
       }
@@ -330,6 +385,12 @@
           }
         }
       }
+    },
+    "密码提示：纯数字" : {
+
+    },
+    "将上方信息发送到 Darock 可以帮助我们改进喵哩喵哩" : {
+
     },
     "已发送" : {
 
@@ -374,7 +435,13 @@
     "您可以将此信息发送至 Darock 以帮助我们改进喵哩喵哩" : {
 
     },
+    "您已更新到新版喵哩喵哩！" : {
+
+    },
     "您应当确认：" : {
+
+    },
+    "您有一份惊喜礼包可领取！" : {
 
     },
     "您的 App 版本将会一并被发送" : {
@@ -408,6 +475,9 @@
           }
         }
       }
+    },
+    "手机扫码领取" : {
+
     },
     "扫码登录" : {
       "localizations" : {
@@ -456,6 +526,9 @@
           }
         }
       }
+    },
+    "无反馈" : {
+
     },
     "是...边缘的风景。" : {
 
@@ -539,6 +612,12 @@
     "此错误无需或无法发送至 Darock" : {
 
     },
+    "注册" : {
+
+    },
+    "注册 Darock 通行证" : {
+
+    },
     "点击登录" : {
       "localizations" : {
         "en" : {
@@ -565,6 +644,9 @@
         }
       }
     },
+    "登录 Darock 通行证" : {
+
+    },
     "确定" : {
       "localizations" : {
         "en" : {
@@ -584,6 +666,9 @@
           }
         }
       }
+    },
+    "确认密码" : {
+
     },
     "视频" : {
       "extractionState" : "stale",
@@ -671,6 +756,9 @@
     "范围：%@" : {
 
     },
+    "警告：发布信息版本与 App 版本不匹配，开发者可能未更改发布信息，或此版本无显著更改" : {
+
+    },
     "设置" : {
 
     },
@@ -717,6 +805,9 @@
           }
         }
       }
+    },
+    "输入密码" : {
+
     },
     "返回" : {
 
@@ -768,6 +859,9 @@
     "遇到问题？在设置页面点击“反馈问题”或在 TestFlight 中反馈，感谢您的支持！" : {
 
     },
+    "邮箱" : {
+
+    },
     "错误/异常行为" : {
 
     },
@@ -799,6 +893,9 @@
           }
         }
       }
+    },
+    "验证码" : {
+
     }
   },
   "version" : "1.0"
