--- a/DarockBili Watch App/Localizable.xcstrings
+++ b/DarockBili Watch App/Localizable.xcstrings
@@ -403,6 +403,17 @@
     "出现问题！" : {
 
     },
+    "加载失败，点击重试" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Loading failed, tap to retry."
+          }
+        }
+      }
+    },
     "加载更多" : {
       "localizations" : {
         "en" : {
