--- a/DarockBili Watch App/Localizable.xcstrings
+++ b/DarockBili Watch App/Localizable.xcstrings
@@ -11,6 +11,12 @@
         }
       }
     },
+    " / %lld" : {
+
+    },
+    "-- And You --" : {
+
+    },
     "--- Alamofire ---\nLicensed under MIT license\n-----------------\n\n--- Dynamic ---\nLicensed under Apache License 2.0\n---------------\n\n--- EFQRCode ---\nLicensed under MIT license\n----------------\n\n--- libwebp ---\nLicensed under BSD-3-Clause license\n---------------\n\n--- SDWebImage ---\nLicensed under MIT license\n------------------\n\n--- SDWebImagePDFCoder ---\nLicensed under MIT license\n--------------------------\n\n--- SDWebImageSVGCoder ---\nLicensed under MIT license\n--------------------------\n\n--- SDWebImageSwiftUI ---\nLicensed under MIT license\n-------------------------\n\n--- SDWebImageWebPCoder ---\nLicensed under MIT license\n---------------------------\n\n--- SFSymbol ---\nLicensed under MIT license\n----------------\n\n--- swift_qrcodejs ---\nLicensed under MIT license\n----------------------\n\n--- SwiftyJSON ---\nLicensed under MIT license\n------------------" : {
 
     },
@@ -31,6 +37,9 @@
         }
       }
     },
+    "“喵哩喵哩”" : {
+
+    },
     "#%lld" : {
       "extractionState" : "stale",
       "localizations" : {
@@ -41,6 +50,9 @@
           }
         }
       }
+    },
+    "%@" : {
+
     },
     "%@\n%@" : {
       "localizations" : {
@@ -111,6 +123,16 @@
         }
       }
     },
+    "%@MB / %@MB" : {
+      "localizations" : {
+        "zh-Hans" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@MB / %2$@MB"
+          }
+        }
+      }
+    },
     "%lld / %lld" : {
       "localizations" : {
         "en" : {
@@ -147,6 +169,12 @@
         }
       }
     },
+    "%lld%%" : {
+
+    },
+    "%lld分钟" : {
+
+    },
     "114" : {
 
     },
@@ -161,7 +189,25 @@
         }
       }
     },
-    "App 行为" : {
+    "Apple Watch 目前无法连接到互联网" : {
+
+    },
+    "Bilibili API 无法访问" : {
+
+    },
+    "Bilibili API 问题" : {
+
+    },
+    "Bilibili API：" : {
+
+    },
+    "Bilibili API：不可用" : {
+
+    },
+    "Bilibili API：可用" : {
+
+    },
+    "Bilibili API：正在检查" : {
 
     },
     "bilibili UP主认证：%@" : {
@@ -178,7 +224,11 @@
     "Close Debug Controls" : {
 
     },
+    "Credits" : {
+
+    },
     "Credits:" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -187,6 +237,33 @@
           }
         }
       }
+    },
+    "Darock API" : {
+
+    },
+    "Darock API 响应无效" : {
+
+    },
+    "Darock API 无法访问" : {
+
+    },
+    "Darock API 服务器目前出现了问题" : {
+
+    },
+    "Darock API 问题" : {
+
+    },
+    "Darock API：不可用" : {
+
+    },
+    "Darock API：可用" : {
+
+    },
+    "Darock API：无效响应" : {
+
+    },
+    "Darock API：正在检查" : {
+
     },
     "Darock Studio" : {
       "localizations" : {
@@ -210,6 +287,9 @@
       }
     },
     "Debug" : {
+
+    },
+    "Debug Search" : {
 
     },
     "Debug Version. DO NOT Release!!" : {
@@ -236,10 +316,23 @@
         }
       }
     },
+    "Lightning-Lion" : {
+
+    },
+    "Linecom" : {
+
+    },
+    "LongUIDUserTest" : {
+
+    },
     "Memory Usage: %f MB" : {
 
     },
+    "name" : {
+
+    },
     "ReX" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -252,18 +345,20 @@
     "Show Debug Controls" : {
 
     },
+    "ThreeManager785" : {
+
+    },
+    "time" : {
+
+    },
     "UP 主认证" : {
 
     },
-    "Watch 的状态栏（控制中心上方）显示为%@而不是%@" : {
-      "localizations" : {
-        "zh-Hans" : {
-          "stringUnit" : {
-            "state" : "new",
-            "value" : "Watch 的状态栏（控制中心上方）显示为%1$@而不是%2$@"
-          }
-        }
-      }
+    "WindowsMEMZ" : {
+
+    },
+    "一切正常" : {
+
     },
     "上一页" : {
       "localizations" : {
@@ -285,6 +380,9 @@
         }
       }
     },
+    "下载视频" : {
+
+    },
     "下面是错误详情：" : {
 
     },
@@ -302,12 +400,6 @@
       }
     },
     "不想登录？直接反馈 ->" : {
-
-    },
-    "不推荐，可能导致页面上字符难以辨别" : {
-
-    },
-    "不模糊背景装扮" : {
 
     },
     "专栏" : {
@@ -334,6 +426,9 @@
         }
       }
     },
+    "互点两下播放/暂停视频" : {
+
+    },
     "人机验证已完成" : {
       "localizations" : {
         "en" : {
@@ -344,13 +439,43 @@
         }
       }
     },
+    "仍有问题？" : {
+
+    },
     "以下为错误详情：" : {
+
+    },
+    "以太网" : {
+
+    },
+    "以太网：在线" : {
+
+    },
+    "以太网：正在检查" : {
+
+    },
+    "以太网：离线" : {
 
     },
     "以音频播放" : {
 
     },
+    "似乎在搜索时遇到了一些问题，以下是详细信息" : {
+
+    },
     "位置：%@" : {
+
+    },
+    "低电量模式" : {
+
+    },
+    "你好，欢迎使用我的app。" : {
+
+    },
+    "使用本app，您需要将iPhone关机。\n（在iPhone关机后）\n打开Apple Watch的设置，打开并连接Wi-Fi或者蜂窝。" : {
+
+    },
+    "使用本app，您需要将iPhone关机。（在iPhone关机后）打开Apple Watch的设置，打开并连接Wi-Fi或者蜂窝" : {
 
     },
     "关于" : {
@@ -388,6 +513,7 @@
 
     },
     "关闭 iPhone 的 Wi-Fi 以及蓝牙" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -400,7 +526,13 @@
     "内存占用: %@ MB / 300 MB" : {
 
     },
+    "再次轻触以在下次更新前禁用此提示" : {
+
+    },
     "出现问题！" : {
+
+    },
+    "加载失败 轻触重试" : {
 
     },
     "加载失败，点击重试" : {
@@ -448,6 +580,7 @@
       }
     },
     "反馈成功！后续可使用反馈 ID：%@ 跟进情况" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -458,6 +591,7 @@
       }
     },
     "反馈类型" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -518,6 +652,7 @@
       }
     },
     "发送的反馈中不含任何您的个人信息" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -605,7 +740,16 @@
     "国际冠字码" : {
 
     },
+    "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。" : {
+
+    },
     "在右上角显示占用（仅本次启动）" : {
+
+    },
+    "在手机上继续" : {
+
+    },
+    "在视频播放器使用互点两下手势(Apple Watch Series 9 及以上)或快速操作(其他机型)暂停或播放视频" : {
 
     },
     "基本操作：" : {
@@ -632,6 +776,7 @@
       }
     },
     "密码提示：纯数字" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -651,6 +796,9 @@
         }
       }
     },
+    "屏幕使用时间" : {
+
+    },
     "已发送" : {
 
     },
@@ -665,6 +813,7 @@
       }
     },
     "建议" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -673,6 +822,9 @@
           }
         }
       }
+    },
+    "开始使用" : {
+
     },
     "开始播放时" : {
 
@@ -704,19 +856,7 @@
         }
       }
     },
-    "怎么做？" : {
-
-    },
     "您可以将此信息发送至 Darock 以帮助我们改进喵哩喵哩" : {
-
-    },
-    "您应当确认：" : {
-
-    },
-    "您有一份惊喜礼包可领取！" : {
-
-    },
-    "您的 App 版本将会一并被发送" : {
 
     },
     "感谢您的支持！" : {
@@ -728,6 +868,12 @@
           }
         }
       }
+    },
+    "我已了解" : {
+
+    },
+    "我应当怎么做？" : {
+
     },
     "我的" : {
 
@@ -755,10 +901,10 @@
         }
       }
     },
-    "手机号" : {
+    "手势" : {
 
     },
-    "手机扫码领取" : {
+    "手机号" : {
 
     },
     "扫码登录" : {
@@ -770,6 +916,9 @@
           }
         }
       }
+    },
+    "找到了以下问题：" : {
+
     },
     "投币" : {
       "localizations" : {
@@ -784,7 +933,7 @@
     "推荐" : {
 
     },
-    "描述发生问题前做了什么？预期的结果？实际的结果？" : {
+    "提交反馈" : {
 
     },
     "搜索" : {
@@ -817,10 +966,13 @@
     "无反馈" : {
 
     },
-    "时间：%@" : {
+    "无法连接到网络" : {
 
     },
-    "是...边缘的风景。" : {
+    "日均" : {
+
+    },
+    "时间：%@" : {
 
     },
     "暗礁反馈" : {
@@ -837,6 +989,18 @@
     "更多" : {
 
     },
+    "本app是非官方的B站客户端，哔哩哔哩是上海宽娱数码科技有限公司的商标。本app强烈建议您登录账号，以便B站官方可以正常收获网络流量，并且鼓励您尽可能使用官方app。本app中和B站相关的功能完全免费，请您再次确认本app与B站官方没有任何合作关系，认可并且尊重本app中所呈现的B站内容来自哔哩哔哩官方。" : {
+
+    },
+    "本app的名字叫%@" : {
+
+    },
+    "本app的开发者、负责人和实际责任人是%@\n联系QQ：3245146430" : {
+
+    },
+    "本旋转功能目前还不完善" : {
+
+    },
     "来自 %@ 的消息：欢迎加群 248036605 获取最新消息谢谢喵！" : {
       "localizations" : {
         "en" : {
@@ -848,6 +1012,7 @@
       }
     },
     "来自ReX的消息：界面与交互设计来自 腕上生花 - ReX Design（wear.rexwe.net）" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -864,6 +1029,7 @@
 
     },
     "标题" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -883,6 +1049,9 @@
         }
       }
     },
+    "检查网络或稍后重试" : {
+
+    },
     "欢迎使用腕上哔哩！" : {
       "localizations" : {
         "en" : {
@@ -892,9 +1061,6 @@
           }
         }
       }
-    },
-    "正在%@" : {
-
     },
     "正在下载..." : {
       "localizations" : {
@@ -907,6 +1073,9 @@
       }
     },
     "正在发送..." : {
+
+    },
+    "正在检查..." : {
 
     },
     "正在解压..." : {
@@ -941,7 +1110,13 @@
     "注册 Darock 通行证" : {
 
     },
+    "注意" : {
+
+    },
     "注意！" : {
+
+    },
+    "添加到收藏夹" : {
 
     },
     "添加到稍后再看" : {
@@ -963,10 +1138,7 @@
     "热门" : {
 
     },
-    "疑难解答找到的问题：" : {
-
-    },
-    "疑难解答无法确定问题" : {
+    "电池" : {
 
     },
     "登录" : {
@@ -980,6 +1152,12 @@
       }
     },
     "登录 Darock 通行证" : {
+
+    },
+    "目前无法连接到 Bilibili 服务器，可能是您的网络出现问题。在少部分情况下，Bilibili 服务器可能已宕机" : {
+
+    },
+    "目标页" : {
 
     },
     "确定" : {
@@ -1002,7 +1180,13 @@
         }
       }
     },
+    "确认 Apple Watch 已连接到互联网" : {
+
+    },
     "确认密码" : {
+
+    },
+    "确认已在手机端同意网络权限" : {
 
     },
     "视频" : {
@@ -1036,6 +1220,7 @@
 
     },
     "简单地描述问题" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1068,6 +1253,9 @@
     "编译时间: %@" : {
 
     },
+    "网络检查" : {
+
+    },
     "网络环境：" : {
       "localizations" : {
         "en" : {
@@ -1078,7 +1266,10 @@
         }
       }
     },
-    "网络说明" : {
+    "网络问题" : {
+
+    },
+    "联系 Darock 或等待修复" : {
 
     },
     "腕上哔哩 v%@ Build %@" : {
@@ -1119,6 +1310,9 @@
       }
     },
     "自动旋转（仅竖向）" : {
+
+    },
+    "自动显示网络检查" : {
 
     },
     "范围：%@" : {
@@ -1166,13 +1360,7 @@
         }
       }
     },
-    "详细信息" : {
-
-    },
     "详细信息：%@" : {
-
-    },
-    "请不要在问题描述中填写个人信息" : {
 
     },
     "请确定 Watch 的状态栏（控制中心上方）显示为%@而不是%@" : {
@@ -1191,9 +1379,6 @@
         }
       }
     },
-    "请重试之前的操作，如果问题依然存在，请联系开发者" : {
-
-    },
     "账号" : {
       "localizations" : {
         "en" : {
@@ -1204,7 +1389,13 @@
         }
       }
     },
-    "输入密码" : {
+    "跳转" : {
+
+    },
+    "跳转到..." : {
+
+    },
+    "轻点问题以查看详细信息" : {
 
     },
     "返回" : {
@@ -1218,6 +1409,9 @@
       }
     },
     "还没有装扮呢，去添加一个吧！" : {
+
+    },
+    "这代表什么？" : {
 
     },
     "这里有一些值得注意的地方：" : {
@@ -1243,6 +1437,9 @@
         }
       }
     },
+    "连接状态" : {
+
+    },
     "退出登录" : {
       "localizations" : {
         "en" : {
@@ -1254,6 +1451,9 @@
       }
     },
     "退出程序" : {
+
+    },
+    "通用" : {
 
     },
     "遇到问题？下载%@（暂未上线），附带上方文本进行反馈" : {
@@ -1273,7 +1473,11 @@
     "邮箱" : {
 
     },
+    "重新检查" : {
+
+    },
     "错误/异常行为" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -1302,12 +1506,6 @@
           }
         }
       }
-    },
-    "问题可能来自 Darock，请联系开发者或等待问题解决" : {
-
-    },
-    "问题来自您的网络连接，点此查看网络说明" : {
-
     },
     "需要登录" : {
 
