--- a/DarockBili Watch App/Localizable.xcstrings
+++ b/DarockBili Watch App/Localizable.xcstrings
@@ -14,6 +14,9 @@
     " / %lld" : {
 
     },
+    "_uuid_Gen" : {
+
+    },
     "-- And You --" : {
 
     },
@@ -36,9 +39,6 @@
           }
         }
       }
-    },
-    "“喵哩喵哩”" : {
-
     },
     "#%lld" : {
       "extractionState" : "stale",
@@ -189,6 +189,9 @@
         }
       }
     },
+    "activeBdUrl" : {
+
+    },
     "Apple Watch 目前无法连接到互联网" : {
 
     },
@@ -221,6 +224,12 @@
         }
       }
     },
+    "buvid_fpTest" : {
+
+    },
+    "buvid3_4_actived" : {
+
+    },
     "Close Debug Controls" : {
 
     },
@@ -237,6 +246,12 @@
           }
         }
       }
+    },
+    "Current Global Buvid3: %@" : {
+
+    },
+    "Current Global Buvid4: %@" : {
+
     },
     "Darock API" : {
 
@@ -292,7 +307,13 @@
     "Debug Search" : {
 
     },
-    "Debug Version. DO NOT Release!!" : {
+    "fp" : {
+
+    },
+    "Gen" : {
+
+    },
+    "Get new & active" : {
 
     },
     "Hello, world!" : {
@@ -305,6 +326,9 @@
           }
         }
       }
+    },
+    "Hello, World!" : {
+
     },
     "Jst Placeholder" : {
       "localizations" : {
@@ -345,9 +369,6 @@
     "Show Debug Controls" : {
 
     },
-    "ThreeManager785" : {
-
-    },
     "time" : {
 
     },
@@ -379,6 +400,9 @@
           }
         }
       }
+    },
+    "下载并安装" : {
+
     },
     "下载视频" : {
 
@@ -430,6 +454,7 @@
 
     },
     "人机验证已完成" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
@@ -467,15 +492,6 @@
 
     },
     "低电量模式" : {
-
-    },
-    "你好，欢迎使用我的app。" : {
-
-    },
-    "使用本app，您需要将iPhone关机。\n（在iPhone关机后）\n打开Apple Watch的设置，打开并连接Wi-Fi或者蜂窝。" : {
-
-    },
-    "使用本app，您需要将iPhone关机。（在iPhone关机后）打开Apple Watch的设置，打开并连接Wi-Fi或者蜂窝" : {
 
     },
     "关于" : {
@@ -727,6 +743,9 @@
     "喵哩喵哩在上次运行时出现了一些问题" : {
 
     },
+    "喵哩喵哩已是最新版本" : {
+
+    },
     "喵哩喵哩新版本(v%@ Build %@)已发布！现可更新" : {
       "localizations" : {
         "zh-Hans" : {
@@ -737,10 +756,7 @@
         }
       }
     },
-    "国际冠字码" : {
-
-    },
-    "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。" : {
+    "在使用本 App 前，您需要先知晓以下信息：\n· 本 App 由第三方开发者以及部分社区用户贡献，与哔哩哔哩无合作关系，哔哩哔哩是上海宽娱数码科技有限公司的商标。\n· 本 App 并不是哔哩哔哩的替代品，我们建议您在能够使用官方客户端时尽量使用官方客户端。\n· 本 App 均使用来源于网络的公开信息进行开发。\n· 本 App 中和B站相关的功能完全免费\n· 本 App 中所呈现的B站内容来自哔哩哔哩官方。\n· 本 App 的开发者、负责人和实际责任人是%@\n  联系QQ：3245146430" : {
 
     },
     "在右上角显示占用（仅本次启动）" : {
@@ -761,6 +777,9 @@
           }
         }
       }
+    },
+    "如果无法正常访问网络，请尝试在设置中关闭 iPhone 的 WiFi 和蓝牙开关" : {
+
     },
     "官方" : {
 
@@ -823,7 +842,7 @@
         }
       }
     },
-    "开始使用" : {
+    "开发者" : {
 
     },
     "开始播放时" : {
@@ -855,6 +874,9 @@
           }
         }
       }
+    },
+    "您可于 iPhone 上的 TestFlight 更新 App" : {
+
     },
     "您可以将此信息发送至 Darock 以帮助我们改进喵哩喵哩" : {
 
@@ -902,9 +924,6 @@
       }
     },
     "手势" : {
-
-    },
-    "手机号" : {
 
     },
     "扫码登录" : {
@@ -989,18 +1008,6 @@
     "更多" : {
 
     },
-    "本app是非官方的B站客户端，哔哩哔哩是上海宽娱数码科技有限公司的商标。本app强烈建议您登录账号，以便B站官方可以正常收获网络流量，并且鼓励您尽可能使用官方app。本app中和B站相关的功能完全免费，请您再次确认本app与B站官方没有任何合作关系，认可并且尊重本app中所呈现的B站内容来自哔哩哔哩官方。" : {
-
-    },
-    "本app的名字叫%@" : {
-
-    },
-    "本app的开发者、负责人和实际责任人是%@\n联系QQ：3245146430" : {
-
-    },
-    "本旋转功能目前还不完善" : {
-
-    },
     "来自 %@ 的消息：欢迎加群 248036605 获取最新消息谢谢喵！" : {
       "localizations" : {
         "en" : {
@@ -1049,6 +1056,9 @@
         }
       }
     },
+    "检查更新时出错" : {
+
+    },
     "检查网络或稍后重试" : {
 
     },
@@ -1076,6 +1086,9 @@
 
     },
     "正在检查..." : {
+
+    },
+    "正在检查更新..." : {
 
     },
     "正在解压..." : {
@@ -1108,9 +1121,6 @@
 
     },
     "注册 Darock 通行证" : {
-
-    },
-    "注意" : {
 
     },
     "注意！" : {
@@ -1325,9 +1335,6 @@
         }
       }
     },
-    "获取验证码" : {
-
-    },
     "解析失败或无法播放视频时可尝试更换" : {
 
     },
@@ -1395,6 +1402,9 @@
     "跳转到..." : {
 
     },
+    "软件更新" : {
+
+    },
     "轻点问题以查看详细信息" : {
 
     },
@@ -1428,6 +1438,7 @@
 
     },
     "进行人机验证" : {
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
