Screen Time now can be turned off

--- a/Localizable.xcstrings
+++ b/Localizable.xcstrings
@@ -81,6 +81,9 @@
         }
       }
     },
+    "“屏幕使用时间”会记录您每天使用喵哩喵哩的时间并作出统计" : {
+
+    },
     "%@" : {
       "localizations" : {
         "en" : {
@@ -4180,6 +4183,9 @@
     "令枫" : {
 
     },
+    "关闭“屏幕使用时间”" : {
+
+    },
     "原神" : {
       "localizations" : {
         "en" : {
@@ -4205,6 +4211,12 @@
           }
         }
       }
+    },
+    "将不再记录您的屏幕使用时间, 已记录的数据不会被删除" : {
+
+    },
+    "开启屏幕使用时间" : {
+
     },
     "确认" : {
 
